fix(slots): fix tab lost gap

--- a/src/client/components/tab/index.scss
+++ b/src/client/components/tab/index.scss
@@ -17,7 +17,6 @@ $extraActive: BEMModifier($extra, 'active');
     position: relative;
     user-select: none;
     font-size: 12px;
-    gap: 4px;
     height: 100%;
     min-width: fit-content;
 
